syntax = "proto3";

//option java_multiple_files = true;
option java_package = "com.nguyenduc.grpc";
//option java_outer_classname = "HelloServiceGrpc";

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string requestId = 1;
    string name = 2;
}

message HelloResponse {
    string requestId = 1;
    string message = 2;
    string responseCode = 3;
}